--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 :root {
-  --color-primary: #E6E9D6;
+  --color-primary: #e6e9d6;
   --color-secondary: #383138;
 }
 
@@ -15,6 +15,8 @@
 
 html {
   box-sizing: border-box;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
   font-size: 62.5%;
   color: var(--color-primary);
   overflow: hidden;
@@ -23,6 +25,7 @@ html {
 body {
   position: relative;
   height: 100%;
+  box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
   letter-spacing: 0.1rem;
   background: var(--color-secondary);
